# langchain-chatbot-back

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
ai_back.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/: main.py
api/adapters/: redis_adapters.py
api/controllers/: chat_controller.py
api/core/: config.py  graph.py
api/core/db/: rdb.py
api/core/node/: build_prompt.py  call_model.py  load_history.py  load_summary.py  persist.py
api/core/state/: chatstate.py
api/db/: rdb.py  redis.py
api/db/models/: chat.py
api/prompting/: policy.py
api/providers/: base.py  factory.py  openai_provider.py
api/routers/: api.py
api/routers/chat/: chat.py
api/schemas/chat/: chat.py
api/utils/: pack_prompt.py  policy.py  token_count.py
docker/: app-compose.yml
docker/data/pgsql/data/: postmaster.pid
docker/data/pgsql/data/global/: 1260  1262  2671  2676  pg_control  (+1 more)
scripts_autocommit/: .env.example  README.md  ai_commit_message.py  commit_template.txt  prepare-commit-msg  setup_git_hook.sh
tests/: conftest.py
tests/e2e/: conftest.py
tests/e2e/chat/: test_e2e_chat.py
tests/envs/: e2e.env.example  integration.env.example
tests/integration/: conftest.py
tests/integration/chat/: test_chat_api.py
tests/integration/history/: __init__.py
tests/integration/search/: __init__.py
tests/test_data/: README.md
tests/unit/chat/: test_chat_rest.py  test_chat_router.py
tests/unit/controllers/: test_chat_controller.py
tests/utils/: graph.py
(+6 files in other folders)
