[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-back"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.31",
    "langchain-community>=0.3.27",
    "langgraph>=0.6.6",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
    "openai>=1.0.0",
    "python-dotenv",
    "redis>=5.0",
    "starlette>=0.38",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "sqlmodel>=0.0.22",
    "pgvector>=0.2.5",
]

# ── 테스트/개발 의존성은 분리
[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0"
]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff",
    "mypy",
    "types-requests",
]

# ── 패키지 자동 탐색: api 및 하위 전부 포함
[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]
